# latent-diffusion-model

./: .gitignore  pyproject.toml  requirements.txt
ldm/: __init__.py
ldm/config/: __init__.py  celebahq.py  config.py  model.py
ldm/dataset/: __init__.py  celebahq.py  datamodule.py  mnist.py
ldm/model/: __init__.py  attention.py  model.py  scheduler.py  unet.py  vae.py
ldm/train/: __main__.py
ldm/util/: __init__.py  callback.py  ema.py  parser.py
