[tool.poetry]
name = "ldm"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.7.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
lightning = "^2.2.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
